# IMp_project_xdubsil00

./: .gitignore  README.md  partitions.csv
.cache/clangd/index/: functions_loop.c.9CA96DB245AD5045.idx  imp.h.1A33C5D75086549C.idx  led.c.9B4E7220BC783A8A.idx  led.h.C228D83F245D78F5.idx  led_strip.h.A0EF49317792EC3E.idx  led_strip_api.c.9BB1C19D1CAB8391.idx  led_strip_interface.h.F302D33D74E5C023.idx  led_strip_rmt.h.F3FF9201512E44BD.idx  led_strip_rmt_dev.c.A79D7FE212F94D48.idx  led_strip_rmt_encoder.c.23168C1F908A91F9.idx  led_strip_rmt_encoder.h.9C3EDB4FE20115E4.idx  led_strip_spi.h.AD7DA132D7DAC2A9.idx  led_strip_spi_dev.c.0CE659A37910CE7D.idx  led_strip_types.h.A6B4173B89021D73.idx  main.c.6AFC10CEE826C8FE.idx  matrix.c.1C3051E3A599C789.idx  matrix.h.E59B334A8C8B83CD.idx  uart.c.E090D974A3C5CB0A.idx  uart.h.F2B255C704A01253.idx
D1R32/: CMakeLists.txt  README.md  instructions.txt  partitions.csv  sdkconfig.defaults
D1R32/main/: CMakeLists.txt  functions_loop.c  idf_component.yml  imp.h  main.c
D1R32/main/benchmark/: benchmark.c  benchmark.h
D1R32/main/filesystem/: commands.c  commands.h  filesystem.c  filesystem.h
D1R32/main/filesystem/commands/: cmd_change.c  cmd_create.c  cmd_info.c  cmd_move.c  cmd_view.c
D1R32/main/helper_functions/: helper_functions.c  helper_functions.h
D1R32/main/params/: params.c  params.h  tree.c
D1R32/main/periferies/: led.c  led.h  little_fs.c  little_fs.h  matrix.c  matrix.h  sdcard.c  sdcard.h  uart.c  uart.h
D1R32/main/tasks/: tasks.c  tasks.cpp  tasks.h
Pi4Screen/: file_system.py
main/: CMakeLists.txt  functions_loop.c  imp.h  main.c  main_loop.c
main/periferies/: led.c  led.h  matrix.c  matrix.h  uart.c  uart.h
